[package]
name = "find_raid"
version = "0.1.0"
authors = ["Peter Gerber <peter@arbitrary.ch>"]
exclude = ["testdata/**"]

[dependencies]
bytes = "0.4"
chrono = "0.4"
clippy = { version = "*", optional = true }

[features]
# compile big-endian support (default on big-endian platforms)
big_endian = []
